<resources>
    <string name="app_name">Shop House</string>
    <string name="find_something">Find something...</string>
    <string name="cart">Cart</string>
    <string name="menu">Menu</string>
    <string name="admin">Trang quản lí</string>
    <string name="banner">Banner</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="category1">Category 1</string>
    <string name="flash_sale_item1">Flash Sale Item 1</string>
    <string name="newest_product">Newest product</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="sale">Sale</string>
    <string name="jean">Jean</string>
    <string name="suit">Suit</string>
    <string name="shoe">Shoe</string>
    <string name="vest">Vest</string>
    <string name="t_shirt">T-shirt</string>
    <string name="watch">Watch</string>
    <string name="item">Item</string>
    <string name="hat">Hat</string>
    <string name="belt">Belt</string>
    <string name="sandal">Sandal</string>
    <string name="unisex">Unisex</string>
    <string name="product_description">Product Description</string>
    <string name="product_quantity">Số lượng</string>
    <string name="product_price">Giá</string>
    <string name="save_product">Lưu sản phẩm</string>
    <string name="description">Miêu tả ngắn gon</string>
    <string name="stock_quantity">Số lượng</string>
    <string name="product_name">Tên sản phẩm</string>
    <string name="delete_product">Xóa sản phẩm</string>
    <string name="edit_product">Chỉnh sửa</string>
    <string name="add_to_cart">Thêm vào giỏ</string>
    <string name="best_seller">Best Seller</string>
    <string name="rate">Rate:</string>
    <string name="purchase_count">Đã bán:</string>
    <string name="detail">Xem chi tiết</string>
    <string name="total">Thành tiền:</string>
    <string name="quantity">Số lượng</string>
    <string name="your_cart_is_empty">Bạn vẫn chưa mua gì cả!</string>
    <string name="Remove">Xóa</string>
    <string name="checkout">Thanh toán</string>
    <string name="dot">-----------------------</string>
    <string name="total_price_0_00">Tổng giá tiền: 0 VNĐ</string>
    <string name="total_quantity_0">Tổng số lượng: 0</string>
    <string name="reviews">Đánh giá</string>
    <string name="write_a_review">Đánh giá của bạn</string>
    <string name="submit_review">Gửi</string>
    <string name="add_to_favorites">Thêm ưa thích</string>
    <array name="size_options">
        <item>Size S</item>
        <item>Size M</item>
        <item>Size L</item>
        <item>Size XL</item>
    </array>
    <array name="color_options">
        <item>Đen</item>
        <item>Trắng</item>
        <item>Vàng</item>
        <item>Đỏ</item>
    </array>

    <string name="payment">Đặt hàng</string>
    <string name="delivery_infomation">Thông tin nhận hàng</string>
    <string name="buyer_name">Tên của bạn</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="update_information">Chỉnh sửa thông tin</string>
    <string name="input_coupon">Nhập mã ưu đãi</string>
    <string name="check_coupon">Kiểm tra mã</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="profile_image">profile_image</string>
    <string name="fullname">fullname</string>
    <string name="phone">phone</string>
    <string name="created_on">created_on</string>
    <string name="update_profile">Update</string>
    <string name="no_matching_results_found">No matching results found</string>

    <string-array name="statusOrder">
        <item>Chờ xử lý</item>
        <item>Đang xử lý</item>
        <item>Đã xác nhận</item>
        <item>Đang vận chuyển</item>
        <item>Đã giao hàng</item>
        <item>Đã hủy</item>
    </string-array>
    <string-array name="couponType">
        <item>Phần trăm</item>
        <item>Số</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="edit">Edit</string>
    <string name="coupon_title">Mã giảm giá</string>
    <string name="coupon_date_end">Ngày hết hạn (dd/MM/yyyy)</string>
    <string name="save">Lưu</string>
    <string name="back">Quay về</string>
    <string name="send">Gửi</string>

    <!-- Bank information -->
    <string name="name_account_bank">Trần Bảo Linh</string>
    <string name="number_bank">0333990577</string>
    <string name="mbbankcode">mbbank</string>
    <string name="templateQR">vmoooJD</string>
    <!-- Add other strings as needed -->
</resources>