<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".PaymentActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delivery_infomation"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userPayFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buyer_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/userPayPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/userPayAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/editInfor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/update_information" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPayment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtCouponPay"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:ems="10"
            android:hint="@string/input_coupon"
            android:inputType="text" />

        <Button
            android:id="@+id/btnCheckCoupon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/check_coupon" />

        <TextView
            android:id="@+id/errorCouponMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/facebook_blue"
            android:textSize="18sp"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:id="@+id/totalQuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/facebook_blue"
        android:text="@string/total_quantity_0"
        android:textSize="16sp"
        android:layout_gravity="end"
        android:paddingTop="8dp" />

    <TextView
        android:id="@+id/totalPri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/facebook_blue"
        android:text="@string/total_price_0_00"
        android:textSize="16sp"
        android:layout_gravity="end"
        android:paddingTop="4dp" />

    <TextView
        android:text="@string/dot"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/paymentButton"
        android:layout_gravity="end"
        android:text="@string/payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>