<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Toolbar as header -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_hompage"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/facebook_blue"
            app:title="Home"
            app:titleTextColor="@android:color/white"
            app:menu="@menu/toolbar_menu"/>

        <!-- ScrollView to make the content below the toolbar scrollable -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar_hompage">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- ViewFlipper placed below the Toolbar -->
                <ViewFlipper
                    android:id="@+id/viewFlipper"
                    android:layout_width="match_parent"
                    android:layout_height="150dp" />

                <!-- HorizontalScrollView with buttons placed below the ViewFlipper -->
                <HorizontalScrollView
                    android:id="@+id/horizontal_scroll_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <!-- First row of buttons -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/sale"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                app:cornerRadius="10dp"
                                android:text="@string/sale" />

                            <Button
                                android:id="@+id/jean"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_marginStart="5dp"
                                app:cornerRadius="10dp"
                                android:text="@string/jean" />

                            <Button
                                android:id="@+id/suit"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_marginStart="5dp"
                                app:cornerRadius="10dp"
                                android:text="@string/suit" />

                            <Button
                                android:id="@+id/shoe"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_marginStart="5dp"
                                app:cornerRadius="10dp"
                                android:text="@string/shoe" />

                            <Button
                                android:id="@+id/vest"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_marginStart="5dp"
                                app:cornerRadius="10dp"
                                android:text="@string/vest" />

                            <Button
                                android:id="@+id/t_shirt"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_marginStart="5dp"
                                app:cornerRadius="10dp"
                                android:text="@string/t_shirt" />
                        </LinearLayout>

                        <!-- Second row of buttons -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/watch"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                app:cornerRadius="10dp"
                                android:text="@string/watch" />

                            <Button
                                android:id="@+id/item"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_marginStart="5dp"
                                app:cornerRadius="10dp"
                                android:text="@string/item" />

                            <Button
                                android:id="@+id/hat"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_marginStart="5dp"
                                app:cornerRadius="10dp"
                                android:text="@string/hat" />

                            <Button
                                android:id="@+id/belt"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_marginStart="5dp"
                                app:cornerRadius="10dp"
                                android:text="@string/belt" />

                            <Button
                                android:id="@+id/sandal"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_marginStart="5dp"
                                app:cornerRadius="10dp"
                                android:text="@string/sandal" />

                            <Button
                                android:id="@+id/unisex"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_marginStart="5dp"
                                app:cornerRadius="10dp"
                                android:text="@string/unisex" />
                        </LinearLayout>
                    </LinearLayout>
                </HorizontalScrollView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">
                    <TextView
                        android:textColor="@color/facebook_blue"
                        android:text="@string/best_seller"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewTopProducts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp" />

            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:src="@drawable/common_full_open_on_phone"
            app:backgroundTint="@color/facebook_blue"
            app:fabSize="normal" />
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>